# browser-guard

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: memory-benchmark.csv  memory-benchmark.md
include/: app_config.h  browser_guard.h  process_control.h
src/: app_config.c  browser_guard.c  control_main.c  main.c  process_control.c
tools/: compare-memory.ps1  install-startup.ps1  uninstall-startup.ps1
